feat(frontend): bridge token statistic
